--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 
-MONGODB_URI=mongodb+srv://tltjacshrutika:tltjacshrutika@cluster0.lt1sfio.mongodb.net/tltAdmin?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://akashyadavbackup1079:akashyadav1079@admindata.fsmbg.mongodb.net/?retryWrites=true&w=majority&appName=AdminData
 
 TOKEN_SECRET_KEY = "HELLO EVERY ONE"
 
