--- a/LawerPortfolio/package.json
+++ b/LawerPortfolio/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
