--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ MONGODB_URI=mongodb+srv://akashyadavbackup1079:akashyadav1079@admindata.fsmbg.mo
 TOKEN_SECRET_KEY = "HELLO EVERY ONE"
 
 FRONTEND_URL = http://localhost:5173
-ADMIN_URL = http://localhost:5174/
+ADMIN_URL = http://localhost:5174
